src/test/data/tests/const/invalid/mismatching_const.c
const int a;
int a;

int main(void) {
    return 0;
}
